チーム作成APIを定義した (#38)
* チーム作成APIを定義した

* make openapi

* 409の場合のレスポンスを定義した
