# generated-api/models/TeamCreateRequestBody.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Skill Climbing
+ * スキルの積み上げアプリ
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface TeamCreateRequestBody
+ */
+export interface TeamCreateRequestBody {
+    /**
+     * グループ名
+     * @type {string}
+     * @memberof TeamCreateRequestBody
+     */
+    name: string;
+}
+
+/**
+ * Check if a given object implements the TeamCreateRequestBody interface.
+ */
+export function instanceOfTeamCreateRequestBody(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "name" in value;
+
+    return isInstance;
+}
+
+export function TeamCreateRequestBodyFromJSON(json: any): TeamCreateRequestBody {
+    return TeamCreateRequestBodyFromJSONTyped(json, false);
+}
+
+export function TeamCreateRequestBodyFromJSONTyped(json: any, ignoreDiscriminator: boolean): TeamCreateRequestBody {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'name': json['name'],
+    };
+}
+
+export function TeamCreateRequestBodyToJSON(value?: TeamCreateRequestBody | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'name': value.name,
+    };
+}
+
